// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperationsTable only renders OperationsTableRow children 1`] = `
.c0 {
  display: block !important;
}

<div
  className="table-responsive"
>
  <table
    className="operations-table table table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Updated On
        </th>
        <th>
          Status
        </th>
        <th
          className="text-right"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-testid="operations-table-row"
      >
        <td>
          My Test Dataset
        </td>
        <td>
          Wed Jan 01 2020
        </td>
        <td>
          <span
            className="badge badge-danger"
            data-testid="op-table-row-badge"
          >
            Published
          </span>
        </td>
        <td
          className="c0 td-actions text-right"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`OperationsTable renders correctly with the default props 1`] = `
<div
  className="table-responsive"
>
  <table
    className="operations-table table table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Updated On
        </th>
        <th>
          Status
        </th>
        <th
          className="text-right"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
